[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Gameboard/DragMan.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Gameboard/CamMan.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Gameboard/GridMan.gd" type="Script" id=3]
[ext_resource path="res://Fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Gameboard/Main.gd" type="Script" id=12]
[ext_resource path="res://Images/UI/play_button.png" type="Texture" id=14]
[ext_resource path="res://Scene/SelectBlock.tscn" type="PackedScene" id=16]

[sub_resource type="InputEventKey" id=23]
scancode = 80

[sub_resource type="ShortCut" id=24]
shortcut = SubResource( 23 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventKey" id=21]
scancode = 16777217

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 21 )

[sub_resource type="DynamicFont" id=8]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 6
border_width_top = 4
border_width_right = 6
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0.627451 )

[sub_resource type="DynamicFont" id=14]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 6
border_width_top = 4
border_width_right = 6
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0.627451 )

[node name="Main" type="Node2D"]
script = ExtResource( 12 )

[node name="DragManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="SelectBlock" parent="DragManager" instance=ExtResource( 16 )]
z_index = 5

[node name="CameraManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="CameraManager"]
current = true

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="UI" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="PlayButton" type="TextureButton" parent="UI/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = -16.0
hint_tooltip = "Start/Stop Laser"
mouse_default_cursor_shape = 2
shortcut = SubResource( 24 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackButton" type="Button" parent="UI/CanvasLayer"]
margin_left = 23.0
margin_top = 19.0
margin_right = 161.0
margin_bottom = 88.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
shortcut = SubResource( 13 )
text = "Back"

[node name="NextButton" type="Button" parent="UI/CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -85.0
margin_right = -16.0
margin_bottom = -16.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Next"

[node name="YOUUHH" type="Label" parent="UI/CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -6.0
margin_top = 120.0
margin_right = 6.0
margin_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 12 )
align = 1
valign = 1

[node name="TriesLeft" type="Label" parent="UI/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -366.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 79.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
text = "Tries Left: 9"
align = 2
valign = 1

[connection signal="button_down" from="UI/CanvasLayer/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="UI/CanvasLayer/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_down" from="UI/CanvasLayer/NextButton" to="." method="_on_NextButton_button_down"]
